# exponential_it_core

./: .gitignore  README.md  pyproject.toml  pytest.ini
exponential_core/claudeai/: __init__.py
exponential_core/claudeai/enums/: __init__.py  tax_ids.py
exponential_core/claudeai/schemas/: __init__.py  fileds_to_update.py  find_tax_id.py  invoice_data.py  invoice_line_items.py  invoice_number.py  percepciones.py  purchase_order.py
exponential_core/cluadeai/: __init__.py
exponential_core/cluadeai/schemas/: __init__.py  extractor_taxi_id.py  invoice_number.py
exponential_core/exceptions/: __init__.py  handler.py  types.py
exponential_core/logger/: __init__.py
exponential_core/odoo/: __init__.py
exponential_core/odoo/enums/: __init__.py  address.py  company.py  product.py  tax.py
exponential_core/odoo/schemas/: __init__.py  analytics_accounts.py  base.py  invoice.py  link_invoice.py  mixins.py  normalizers.py  partnet_address.py  product.py  purchase_order.py  supplier.py  taxes.py
exponential_core/openai/: __init__.py
exponential_core/openai/schemas/: __init__.py  extractor_tax_id.py  invoice_totals.py
exponential_core/secrets/: __init__.py  aws_error_handler_async.py  manager.py
exponential_core/utils/: aws_error_handler.py
tests/exceptions/: test_custom_exceptions.py  test_handlers.py
tests/secret/: test_manager.py
